# Iszkur

./: Cargo.toml
gnu-mingw/lib/32/pkgconfig/: sdl3.pc
iszkur/: Cargo.toml
iszkur/src/: lib.rs
iszkurlib/: Cargo.toml
msvc/lib/32/: SDL3.lib  SDL3_mixer.lib
msvc/lib/64/: SDL3_image.lib  SDL3_test.lib  SDL3_ttf.lib
server/: HELP.md  pom.xml
server/src/main/java/pl/pawelpn/iszkur/: IszkurApplication.java
server/src/main/resources/: application.properties
server/src/test/java/pl/pawelpn/iszkur/: IszkurApplicationTests.java
synchronizer/: Cargo.toml
